fixed long titles clashing with date on small screen

--- a/src/front-end/landing/landing.css
+++ b/src/front-end/landing/landing.css
@@ -210,6 +210,10 @@ a:active {
         text-align: center;
         margin-bottom: 5px;
     }
+
+    h3 {
+        font-size: 15px;
+    }
 }
 
 @media only screen and (max-width: 400px) {
